execution_sample_out/substitution_cipher/006.txt
An error happened during execution:
  File "/tmp/tmpxwfxhz1w.py", line 84
    num = int(d + E[i+1})
                       ^
SyntaxError: closing parenthesis '}' does not match opening parenthesis '['
